--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,68 @@
 .App {
-  text-align: center;
+	text-align: center;
+	display: flex;
+	width: 300px;
 }
 
 .App-logo {
-  height: 40vmin;
+	height: 40vmin;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #09d3ac;
+	color: #09d3ac;
+}
+
+.open-button {
+	background-color: #4caf50; /* Green */
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	width: 100%;
+}
+
+.open-button:hover {
+	box-shadow: 0 12px 16px 0 darkgray, 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.container {
+	display: flex;
+	flex-direction: column;
+	padding: 0.5rem;
+}
+
+.title {
+	color: white;
+	text-shadow: 2px 2px 4px grey;
+	font-size: 19px;
+}
+
+.input-field {
+	width: 100%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	font-size: 19px;
+	font-family: "Arial Black", Gadget, sans-serif;
+	box-sizing: border-box;
+	color: #686868;
+}
+
+title {
+	font-size: 30px;
 }
